# skilltree

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
skilltree/: __init__.py  analyze.py  cli.py  growth.py  history.py  knowledge.py  practice.py  recommend.py  render.py  tokenizer.py
skilltree/data/: sample_history.txt
skilltree/knowledge_base/: awk.yaml  curl.yaml  docker.yaml  find.yaml  git.yaml  grep.yaml  kubectl.yaml  sed.yaml  ssh.yaml  tar.yaml
tests/: conftest.py  test_analyze.py  test_history.py  test_knowledge.py  test_recommend.py  test_tokenizer.py
tests/fixtures/: sample.bash_history  sample.zsh_history  sample_history.txt
tools/: make_screenshots.py
